hphp/test/zend/good/Zend/tests/heredoc_014.php.expectf

Fatal error: A double quote is expected here. in %s/heredoc_014.php on line 4
